--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "husky": "^9.1.7",
+    "msw": "^2.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
@@ -38,5 +39,10 @@
     "cz-customizable": {
       "config": "cz-config.js"
     }
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
