--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "commit": "CZ_TEST=true cz"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
